--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@hono/node-server": "^1.19.6",
     "cross-env": "^10.1.0",
+    "dotenv": "^17.2.3",
     "hono": "^4.10.7"
   },
   "devDependencies": {
