--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.6",
+    "@neondatabase/serverless": "^1.0.2",
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
-    "hono": "^4.10.7"
+    "hono": "^4.11.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
+    "@types/node": "^20.19.27",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
