--- a/package.json
+++ b/package.json
@@ -2,20 +2,25 @@
   "name": "itloc_hono_hospital_2511",
   "type": "module",
   "scripts": {
+    "clean": "rimraf dist",
     "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "npm run clean && tsc",
+    "start_bk": "npm run build && cross-env NODE_ENV=production node dist/index.js",
+    "start": "cross-env NODE_ENV=production tsx watch src/index.ts",
+    "start_build": "npm run build && cross-env NODE_ENV=production node dist/index.js",
+    "start:vercel": "cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.6",
     "@neondatabase/serverless": "^1.0.2",
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
-    "hono": "^4.11.1"
+    "hono": "^4.11.1",
+    "rimraf": "^6.1.2"
   },
   "devDependencies": {
     "@types/node": "^20.19.27",
-    "tsx": "^4.7.1",
+    "tsx": "^4.21.0",
     "typescript": "^5.8.3"
   }
 }
